--- a/Page.app.html
+++ b/Page.app.html
@@ -35,7 +35,7 @@
             </div>
         
         </div>
-<script src = "Main_api.js"> 
+<script type ="module" src = "Main_script.js"> 
 </script>
     </body>
 </html>
