May be should I go sleep ?- Commit-9

--- a/1-Html_Directory/UI_Weatherapp_landscape.html
+++ b/1-Html_Directory/UI_Weatherapp_landscape.html
@@ -24,12 +24,42 @@
                 </div>
 
                 <div class="top_left_corner_section">
+
                     <div class="menu">
-                    <p>Menu</p>
+                    <p>MENU</p>
                     </div>
                     <button id="Choose_ENG">ENG</button><button id="Choose_FR">FR</button>
+
                 </div>
             </section>
+
+            <section class="daily_weather_data">
+
+                <div class="icone_current_weather">
+
+                    <img src="/Images_source/PNG_icons_256x256/partlysunny.png" alt="icone_current_weather">
+                    <p id="daily_sunrise">Sunrise : 5 AM</p>
+                    <p id="dailysunset">Sunset : 8 PM</p>
+
+                </div>
+
+                <div class="current_weather_data">
+                    <p id="date">Friday 27 july 15 </p>
+                    <p id="current_temperature">+ 22°C</p>
+                    <p id="apparent_temperature">Feels Like 23°</p>
+                </div>
+
+                <div class="more_details">
+                    <p>MORE DETAILS :</p>
+                    <p id="wind_speed">Wind speed : 1-8 Km/h</p>
+                    <p id="air_humidity">Air humidity : 42 - 56%</p>
+                    <p id="pressure"></p>
+                    <p id="precipitation"></p>
+                </div>
+
+            </section>
+
+
 
         </div>
 
