Commit -12 Responsive Done

--- a/1-Html_Directory/UI_Weatherapp_landscape.html
+++ b/1-Html_Directory/UI_Weatherapp_landscape.html
@@ -3,12 +3,13 @@
 
     <head>
         <Title>Weather_app Landscape</Title>
-        <!--  <link rel="stylesheet" href="/2-CSS_Directory/UI_Weatherapp_landscape.css"> -->
-        <link rel="stylesheet" href="/2-CSS_Directory/Main_layout.css">
+        <link rel="stylesheet" href="/2-CSS_Directory/Fonts.css">
         <link rel="stylesheet" href="/2-CSS_Directory/Nav_top_bar_menu.css">
         <link rel="stylesheet" href="/2-CSS_Directory/Section_daily_weather_data.css">
         <link rel="stylesheet" href="/2-CSS_Directory/Section_weekly_weather_data.css">
-        <link rel="stylesheet" href="/2-CSS_Directory/Fonts.css">
+        <link rel="stylesheet" href="/2-CSS_Directory/Main_layout.css">
+        <!--Media queries-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Fonts - Roboto | from Google : https://fonts.google.com/selection/embed-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -312,6 +313,6 @@
             <!--</div> -->
         </div>
 
-
+        <script type ="module" src = "/3-JS_Directory/Main_script.js"> </script>
     </body>
 </html>
