--- a/1-Html_Directory/Page.app.html
+++ b/1-Html_Directory/Page.app.html
@@ -34,7 +34,6 @@
             </div>
         
         </div>
-<script type ="module" src = "Main_script.js"> 
-</script>
+<script type ="module" src = "Main_script.js"></script>
     </body>
 </html>
